--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^3.2.3"
 django-crispy-forms = "^1.11.2"
 channels = "^3.0.3"
+channels-redis = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
